<resources>
    <string name="app_name">EdinFit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_wait_or_walk_result">Wait or Walk</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_dont_have_account_sign_up">Don\'t have an account? Sign up now.</string>
    <string name="action_logout">Log out</string>
    <string name="action_filter_departures">Filter</string>
    <string name="action_wait_or_walk">Wait or Walk</string>
    <string name="action_get_to_somewhere">Get to Somewhere</string>
    <string name="action_select_origin">Select Origin</string>
    <string name="action_done">Done</string>
    <string name="action_select_service">Select Service</string>
    <string name="action_select_final_stop">Select Destination</string>
    <string name="action_change_route">Change\nRoute</string>
    <string name="action_search">Search</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="label_loading">Loading…</string>
    <string name="activity">Activity</string>
    <string name="user_profile">User Profile</string>
    <string name="label_go">Go</string>
    <string name="nearby_bus_stops">Nearby Bus Stops</string>
    <string name="drawer_close">Open navigation menu</string>
    <string name="drawer_open">Close navigation menu</string>
    <string name="label_more_options">More options</string>
    <string name="label_nearest_bus_stops">Nearest bus stops (\u003C5 min walk)</string>
    <string name="label_farther_away">Farther away</string>
    <string name="label_no_upcoming_departures">No upcoming departures</string>
    <string name="label_not_found">Not found</string>
    <string name="label_last_updated">Last updated at: </string>
    <string name="lalbe_last_updated_at_format">Last updated at %1$s</string>
    <string name="label_member_since_format">Member since %1$s</string>
    <string name="label_departures">Departures</string>
    <string name="label_map">Map</string>
    <string name="label_weekday">Weekday</string>
    <string name="label_saturday">Saturday</string>
    <string name="label_sunday">Sunday</string>
    <string name="label_showing_departures_for">Showing departures for: </string>
    <string name="label_stops">Stops</string>
    <string name="label_towards">Towards %1$s</string>
    <string name="label_select_route">Select route</string>
    <string name="label_set">Set</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_start">Start</string>
    <string name="label_next">Next</string>
    <string name="label_end">End</string>
    <string name="label_walk_duration_format">%1$s walk</string>
    <string name="label_walk_duration">Walk Duration</string>
    <string name="label_wait_duration_base">Wait (%1$s)</string>
    <string name="label_wait_duration">Wait Duration</string>
    <string name="label_nearest">Nearest</string>
    <string name="label_save">Save</string>
    <string name="label_unsave">Unsave</string>
    <string name="label_show_on_map">Show on map</string>
    <string name="label_saved">Saved</string>
    <string name="label_modes">Modes</string>
    <string name="label_where_are_you_waiting">Where are you waiting?</string>
    <string name="label_hint_long_click_stop_fpr_more_info">Hint: Long click on a stop to view more info.</string>
    <string name="label_which_service_are_you_going_to_use">Which service are you going to use?</string>
    <string name="label_hint_long_click_service_for_more_info">Hint: Long click on a service to view more info.</string>
    <string name="label_where_will_you_get_off">Where will you get off?</string>
    <string name="label_wait_or_walk_activity">Wait or Walk Activity</string>
    <string name="label_click_here_to_select">Click here to select</string>
    <string name="label_service_name_and_description">%1$s (%2$s)</string>
    <string name="label_destination_stop_and_route">%1$s (towards %2$s)</string>
    <string name="label_doing_complex_stuff">Doing complex stuff…</string>
    <string name="label_walk">Walk</string>
    <string name="label_wait">Wait</string>
    <string name="label_wait_here">Wait here</string>
    <string name="label_walking_directions">Walking Directions</string>
    <string name="label_at">at</string>
    <string name="label_to">to</string>
    <string name="label_by">by</string>
    <string name="label_until">until</string>
    <string name="label_nothing_found">Nothing found here…</string>
    <string name="label_fetching_walking_direction">Fetching walking directions…</string>
    <string name="label_walk_to_stop_by_time">Walk to %1$s by %2$s</string>
    <string name="label_wait_at_stop_until_time">Wait at %1$s until %2$s</string>
    <string name="label_time_remaining">Time remaining: %1$s</string>
    <string name="label_time_remaining_2">Time Remaining</string>
    <string name="label_stop">Stop</string>
    <string name="label_directions">Directions</string>
    <string name="label_suggestions">Suggestions</string>
    <string name="label_distance">Distance</string>
    <string name="label_none">None</string>
    <string name="label_find_a_bus">Find a Bus</string>
    <string name="label_search_by_number_or_description">Search by number or description</string>
    <string name="label_success">Success!</string>
    <string name="label_failure">Failure!</string>
    <string name="label_stop_name_with_direction">%1$s (%2$s)</string>
    <string name="label_please_waitt">Please wait…</string>
    <string name="label_activity_info_format">%1$s • %2$s</string>
    <string name="label_upcoming_departure_info">%1$s • %2$s • %3$s</string>
    <string name="label_activity_description_format">%1$s to %2$s</string>
    <string name="label_calories">Calories</string>
    <string name="label_time">Time</string>
    <string name="label_steps">Steps</string>
    <string name="label_steps_today_format">%1$s steps today</string>
    <string name="label_stat_today_format">%1$s today</string>
    <string name="label_calories_burned_format">%1$s calories burned</string>
    <string name="label_calories_format">%1$s kcal</string>
    <string name="label_steps_format">%1$s steps</string>
    <string name="label_home_navigation">Home Navigation</string>
    <string name="label_reset">Reset</string>
    <string name="label_previous">Previous</string>
    <string name="label_services">Services</string>
    <string name="label_num_results_singular">%1$s result</string>
    <string name="label_num_results_plural">%1$s results</string>
    <string name="label_enter_search_keyword">Enter search keyword</string>
    <string name="label_search_hint">Search for stops by name and services by name or description</string>
    <string name="label_no_results">No results</string>
    <string name="label_change_location">Change location</string>
    <string name="label_set_location">Set Location</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_selected_location">Selected location</string>
    <string name="label_step_1">Step 1</string>
    <string name="label_step_2">Step 2</string>
    <string name="label_step_3">Step 3</string>
    <string name="label_departure_times">Departure Times</string>
    <string name="label_live_departures">Live Departures</string>
    <string name="label_timetable_format">Timetable (%1$s)</string>
    <string name="label_set_time">Set time</string>
    <string name="label_select_desired_services">Select desired services</string>
    <string name="label_or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="facebook_login_cancelled">Facebook login cancelled</string>
    <string name="label_activity_time">Activity Time</string>
    <string name="label_average_speed">Average Speed</string>
    <string name="label_speed_format">%1$.2f kmph</string>
    <string name="label_view_departures">View departures</string>
    <string name="label_add_to_favourites">Add to Favourites</string>
    <string name="label_remove_from_favourites">Remove from Favourites</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="setting_things_up">Setting things up…</string>
    <string name="search_for_stops_and_services">Search for stops and services</string>
    <string name="service_format">Service %1$s</string>
    <string name="arrives_at_format">arrives at %1$s</string>
    <string name="no_journey_found">No journey found</string>
    <string name="due">Due</string>
    <string name="choose_origin">Choose Origin</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="options">Options</string>
    <string name="journey_planner">Journey Planner</string>
    <string name="get_directions">Get Directions</string>
    <string name="search_for_location">Search for location</string>
    <string name="arrive_by">Arrive by</string>
    <string name="leave_after">Leave after</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="journey_date_and_time_format">%1$s: %2$s, %3$s</string>
    <string name="journey_date_and_time_format_without_timemode">%1$s, %2$s</string>
    <string name="must_select_origin">You must select an origin</string>
    <string name="must_select_destination">You must select a destination</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="no_journeys_found">No journeys found</string>
    <string name="journey_details">Journey Details</string>
    <string name="walk_to">Walk to</string>
    <string name="finish">Finish</string>
    <string name="services_affected">Services affected:</string>
    <string name="disruptions">Disruptions</string>
    <string name="journey_to_format">Journey to %1$s</string>
    <string name="activity_saved_successfully_format">%1$s activity saved successfully.</string>
    <string name="activity_deleted_successfully_format">%1$s activity deleted successfully.</string>
    <string name="activity_details">Activity Details</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_delete_activity">Are you sure you would like to delete this activity?</string>
    <string name="delete">Delete</string>
    <string name="no_activities_found">No activities found.\nUse the + button below to start a new activity.</string>
    <string name="no_favourite_stops_found">No favourite stops found.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_your_account_info">Change your account info</string>
    <string name="disruption_notifications">Disruption notifications</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="full_name">Full name</string>
    <string name="name_cannot_be_left_blank">Name cannot be left blank</string>
    <string name="user_profile_updated_successfully">User profile updated successfully</string>
    <string name="your_daily_average_is_format">Your daily average is %1$s</string>
    <string name="route_options">Route options</string>
    <string name="min_walk">Least walking</string>
    <string name="some_walk">A lot of walking</string>
    <string name="only_walk">Only walking</string>
    <string name="no_bus_journeys_found_so_showing_only_walking_journes">No bus jurneys found, so only showing walking journeys.</string>
</resources>