<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/action_nearby_stops"
            android:title="@string/nearby_bus_stops"
            android:icon="@drawable/ic_near_me_white_36dp"
            />
        <item
            android:id="@+id/action_favourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_star_white_36dp"
            />
        <item
            android:id="@+id/action_activity"
            android:title="@string/activity"
            android:icon="@drawable/ic_directions_run_white_36dp"
            />
        <item
            android:id="@+id/action_disruptions"
            android:title="@string/disruptions"
            android:icon="@drawable/ic_info_outline_black_36dp"
            />
        <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_white_36dp"
            />
    </group>
</menu>