<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    >

    <Button
        android:id="@+id/weekday_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_weekday"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/saturday_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_saturday"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

    <Button
        android:id="@+id/sunday_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_sunday"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

</LinearLayout>