<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/spacing_huge"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_light"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            style="@style/TextAppearance.AppCompat.Display3"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:layout_marginTop="@dimen/spacing_normal"
            />

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_dont_have_account_sign_up"
            android:layout_gravity="center"
            android:textColor="@color/primary_text_light"
            android:layout_marginTop="@dimen/spacing_huge"
            android:clickable="true"
            />

    </LinearLayout>
</ScrollView>
