<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_name"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    style="@style/EditText"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    style="@style/EditText"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    style="@style/EditText"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/confirm_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_confirm_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    style="@style/EditText"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_signup"
                android:layout_marginTop="@dimen/spacing_normal"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

