<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/heading_textview"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_modes"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_tiny"
                style="@style/TextViewHeading"
                />

            <LinearLayout
                android:id="@+id/wait_or_walk_view"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_device_access_time_light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/font_normal_large"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:text="@string/action_wait_or_walk"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider"
                />

            <LinearLayout
                android:id="@+id/get_to_somewhere_view"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_maps_directions"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:text="@string/action_get_to_somewhere"
                    android:textSize="@dimen/font_normal_large"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>
</ScrollView>
